--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -149,8 +149,8 @@ html, body {
     left: 2px;
     width: 8px;
     height: 8px;
-    border: 1px solid #000;
-    background: rgba(0, 0, 0, 0);
+    border: 1px solid #fff;
+    background: #062b6f;
     border-radius: 50%;
     position: absolute;
     z-index: 1;
